add position endponts
